virt01/manual/torrent/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome-svc
  labels:
    app: navidrome
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "4533"
spec:
  ports:
    - port: 4533
      protocol: TCP
      targetPort: 4533
      name: navidrome-svc-port
  selector:
    app: navidrome
